flatpak: Do not call flatpak function with a nullptr

BUG: 445819